[package]
name = "constcat"
version = "0.3.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "concat! with support for const variables and expressions"
readme = "README.md"
repository = "https://github.com/rossmacarthur/constcat"
license = "MIT OR Apache-2.0"
keywords = ["concat", "const"]
categories = ["no-std", "rust-patterns"]

[features]
default = ["bytes"]

# Adds support for the concat_bytes! macro
bytes = []
